# zero

./: .travis.yml  CMakeLists.txt  ReadMe-Public.md  ReadMe.md  appveyor.yml  package-info.json.in
docs/: zero.announce.maxref.xml  zero.browse.maxref.xml  zero.resolve.maxref.xml
docs/topics/: zero_topic.maxvig.xml
extras/: Zero-Configuration Networking.maxpat
help/: zero.announce.maxhelp  zero.browse.maxhelp  zero.hello-world.maxhelp  zero.resolve.maxhelp
patchers/: zero.menu.format.maxpat
source/projects/: zero.h
source/projects/zero.announce/: CMakeLists.txt  zero.announce.cpp
source/projects/zero.browse/: CMakeLists.txt  zero.browse.cpp
source/projects/zero.hello-world/: zero.hello-world_test.cpp
source/projects/zero.resolve/: CMakeLists.txt  zero.resolve.cpp
